--- a/MonitorGUI/Pages/TestPage.axaml
+++ b/MonitorGUI/Pages/TestPage.axaml
@@ -3,6 +3,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             Margin="40"
              x:Class="MonitorGUI.Pages.TestPage">
-  Welcome to Avalonia!
+  <StackPanel>
+    <Label>ProgressBar</Label>
+    <ProgressBar Value="50" Maximum="100" Minimum="0"></ProgressBar>
+
+    <Label Margin="0,50,0,0">Slider</Label>
+    <Slider Value="50" Maximum="100"></Slider>
+  </StackPanel>
 </UserControl>
